--- a/cv.Rmd
+++ b/cv.Rmd
@@ -11,56 +11,51 @@ output:
     self_contained: true
 ---
 
-```{r setup, include=FALSE}
+```{r, include=FALSE}
 knitr::opts_chunk$set(
   results='asis', 
   echo = FALSE
 )
-library(tidyverse)
-library(magrittr)
-```
 
-```{r, cache = TRUE, include = FALSE}
-# Using an in-development package for building these cvs. Install with
-# devtools::install_github("nstrayer/datadrivencv")
+library(magrittr) # For the pipe
+source("CV_printing_functions.R")
 
 # Read in all data and initialize a CV printer object
-cv_printer <- datadrivencv::CV_Printer$new(
+CV <- create_CV_object(
   data_location = "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc",  
   pdf_location = "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf",
-  html_location = "nickstrayer.me/cv/")
+  html_location = "nickstrayer.me/cv/",
+  pdf_mode = params$pdf_mode
+)
+
 ```
 
 
 ```{r}
-# This toggles if output is rendered in PDF format or HTML
-cv_printer$set_pdf_mode(params$pdf_mode)
-
 # Add some conditional CSS if in PDF mode needed due to quirks in chrome print rendering
-cv_printer$set_style()
+CV %>% set_style()
 ```
 
 
 Aside
 ================================================================================
 
-
 ```{r}
-datadrivencv::build_network_logo(cv_printer$position_data)
+# Build interactive network of positions colored by section
+# and connected if they occurred in the same year
+datadrivencv::build_network_logo(CV$entries_data)
 ```
 
 
-
-
 ```{r}
-cv_printer$print_link_to_other_format()
+CV %>% print_link_to_other_format()
 ```
 
 Contact {#contact}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_contact_info()
+CV %>% print_contact_info()
 ```
 
 
@@ -69,7 +64,7 @@ Language Skills {#skills}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_skill_bars()
+CV %>% print_skill_bars()
 ```
 
 
@@ -92,7 +87,8 @@ Nick Strayer {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_text_block("intro")
+# Note the special double pipe so we modify the CV object in place
+CV %<>% print_text_block("intro") 
 ```
 
 
@@ -101,7 +97,7 @@ Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_section('education')
+CV %<>% print_section('education')
 ```
 
 
@@ -110,7 +106,7 @@ Research Experience {data-icon=laptop}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_section('research_positions')
+CV %<>% print_section('research_positions')
 ```
 
 
@@ -120,12 +116,12 @@ Industry Experience {data-icon=suitcase}
 
 ::: aside
 ```{r}
-cv_printer$print_text_block('industy_experience_aside')
+CV %<>% print_text_block('industy_experience_aside')
 ```
 :::
 
 ```{r}
-cv_printer$print_section('industry_positions')
+CV %<>% print_section('industry_positions')
 ```
 
 <!-- These breaks just force a new page so section doesnt get cut off -->
@@ -138,12 +134,12 @@ Teaching Experience {data-icon=chalkboard-teacher}
 
 ::: aside
 ```{r}
-cv_printer$print_text_block('teaching_experience_aside')
+CV %<>% print_text_block('teaching_experience_aside')
 ```
 :::
 
 ```{r}
-cv_printer$print_section('teaching_positions')
+CV %<>% print_section('teaching_positions')
 ```
 
 
@@ -153,12 +149,12 @@ Selected Data Science Writing {data-icon=chart-line}
 
 ::: aside
 ```{r}
-cv_printer$print_text_block('data_science_writing_aside')
+CV %<>% print_text_block('data_science_writing_aside')
 ```
 :::
 
 ```{r}
-cv_printer$print_section('data_science_writings')
+CV %<>% print_section('data_science_writings')
 ```
 
 
@@ -167,7 +163,7 @@ Selected Press (About)  {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_section('about_me_press')
+CV %<>% print_section('about_me_press')
 ```
 
 
@@ -179,7 +175,7 @@ Selected Press (By)  {data-icon=newspaper}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_section('by_me_press')
+CV %<>% print_section('by_me_press')
 ```
 
 
@@ -188,12 +184,11 @@ Selected Publications, Posters, and Talks {data-icon=book}
 --------------------------------------------------------------------------------
 
 ```{r}
-cv_printer$print_section('academic_articles')
+CV %<>% print_section('academic_articles')
 ```
 
 
 
 ```{r}
-cv_printer$print_links()
+CV %<>% print_links()
 ```
-
